TESTS_ENVIRONMENT = source $(builddir)/tests-env.sh;

TEST_BIN = external/bin/lcm25 \
	   external/bin/gSpan \
	   external/bin/glcm

TESTS = test_fim_simple.sh \
	test_fim_simple_mt.sh \
	test_fim_full_compare.sh \
	test_fim_full_compare_mt.sh \
	test_gri_full_compare.sh \
	test_crg_simple.sh 


EXTRA_DIST= $(TEST_BIN) $(TESTS) 



